--- a/Home.html
+++ b/Home.html
@@ -43,15 +43,35 @@
 <div class="logo2">
     <img src="S-removebg-preview.png">
 </div>
-<marquee class="marq" direction="left" loop="" scrollamount="6">
+<marquee class="marq" direction="right" loop="" scrollamount="6">
 <div class="geek1">
-<img src="coconut_.__1_-removebg-preview.png" id="la">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <img src="vogue.svg">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <img src="harpers.svg">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <img src="martha.svg">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <img src="nytm.svg">
-</div>
 </marquee>
+<marquee class="marq2" direction="left" loop="" scrollamount="6">
+<div class="geek2">
+    <h4>Planning an event should, in fact, be fun and enjoyable.</h4>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <img src="star.png">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <h4>Our clients never need to spend a single iota of time searching for inspiration. </h4>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+       <img src="star.png">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <h4>You don’t know what you don’t know—but we do. </h4>
+    </div>
+</marquee>
+<center>
+<div class="table1">
+<div id="pic">
+        <img src="evelina-friman-hw_sKmjb0ns-unsplash.jpg">
+</div>
+<div id="pic1">
+    <a class="j" href="#">
+        <img src="Black_And_White_Aesthetic_Minimalist_Modern_Simple_Typography_Coconut_Cosmetics_Logo__1_-removebg-preview (1).png" alt="">
+      </a>
+        <h6 class="q"> THE KIND OF PARTY YOUR GUESTS TALK ABOUT FOR DECADES</h6>
+        <h4>We’re a perfect match to help you plan a celebration that resonates on a deeply personal level; a party that one day you’ll look back on and say: <i>“Wow, that was everything we wanted and more.”</i></h4>
+</div>
+</div></center>
 </main>
 </body>
 </html>
