--- a/cosmic ocassion by mehak/celebration.html
+++ b/cosmic ocassion by mehak/celebration.html
@@ -7,24 +7,23 @@
     <link rel="stylesheet" href="celebration.css">
 </head>
 <body>
-    <div id="back">
-        <h1 id="porfolio">CELEBRATIONS</h1>
-    </div>
-    <div id="mid"><br><br>
-        <h2>Our stunning waterfall ceremony captured on film.<br></h2>
-        This incredible Las Vegas ceremony had 7 real waterfalls created. Scroll
-        <br> to view more of our beautiful ceremonies we have created.
-    </div>
+    <div id="nav"></div>
+    <div class="blank"></div>
+    <div class="container">
+        <h1>CELEBRATION</h1>
+      </div>
+      <div class="blank"></div>
+    
     <div id="contain">
-        <img src="cb1.jpg" height="400px" width="350px">
-        <img src="cb2.jpg" height="400px" width="350px">
-        <img src="cb3.jpg" height="400px" width="350px">
+        <img src="cb1.jpg" height="400px" width="350px" id="ima">
+        <img src="cb2.jpg" height="400px" width="350px" id="ima">
+        <img src="cb3.jpg" height="400px" width="350px" id="ima">
     </div>
     <div></div>
     <div id="contain">
-        <img src="cb4.jpg" height="400px" width="350px">
-        <img src="cb5.jpg" height="400px" width="350px">
-        <img src="cb6.jpg" height="400px" width="350px">
+        <img src="cb4.jpg" height="400px" width="350px" id="ima">
+        <img src="cb5.jpg" height="400px" width="350px" id="ima">
+        <img src="cb6.jpg" height="400px" width="350px"  id="ima">
     </div>
 </body>
 </html>
