--- a/cosmic ocassion by mehak/reception.html
+++ b/cosmic ocassion by mehak/reception.html
@@ -7,24 +7,28 @@
     <link rel="stylesheet" href="reception.css">
 </head>
 <body>
-    <div id="back">
-        <h1 id="porfolio">CEREMONIES</h1>
-    </div>
+    <div id="nav"></div>
+    <div class="blank"></div>
+    <div class="container">
+        <h1>RECEPTION</h1>
+      </div>
+      <div class="blank"></div>
     <div id="mid"><br><br>
-        <h2>Our stunning waterfall ceremony captured on film.<br></h2>
-        This incredible Las Vegas ceremony had 7 real waterfalls created. Scroll
-        <br> to view more of our beautiful ceremonies we have created.
+        <h2>View our Las Vegas ice reception captured on film.
+            </h2>
+            A unique reception created using only ice sculptures.<br><br> Scroll to view more 
+            of our one-of-a-kind reception designs.
     </div>
     <div id="contain">
-        <img src="r3.jpeg" height="400px" width="350px">
-        <img src="r4.jpeg" height="400px" width="350px">
-        <img src="r5.jpeg" height="400px" width="350px">
+        <img src="r3.jpeg" height="400px" width="350px" id="ima">
+        <img src="r4.jpeg" height="400px" width="350px" id="ima">
+        <img src="r5.jpeg" height="400px" width="350px" id="ima">
     </div>
     <div></div>
     <div id="contain">
-        <img src="r1.jpg" height="400px" width="350px">
-        <img src="r2.jpg" height="400px" width="350px">
-        <img src="r3.jpeg" height="400px" width="350px">
+        <img src="r1.jpg" height="400px" width="350px" id="ima">
+        <img src="r2.jpg" height="400px" width="350px" id="ima">
+        <img src="r3.jpeg" height="400px" width="350px" id="ima">
     </div>
 </body>
 </html>
