--- a/cosmic ocassion by mehak/portfolio.html
+++ b/cosmic ocassion by mehak/portfolio.html
@@ -4,13 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
+    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="porfolio.css">
 </head>
 <body>
     <div id="back">
         <h1 id="porfolio">Portfolio</h1>
     </div>
-    <div id="mid"><br><br><br><br>COSMIC OCCASION<br>
+    <div id="mid"><br><br><br><br>COSMIC OCCASION <br>
         <h2>Floral Designer. Event Director. Sculpture Artist.<br></h2>
         With Works Featured In Jakarta, New York, Hong Kong, Bahrain, London, Las Vegas
          And Beyond<br> Cosmic Occasion Creates Everything From Dramatic Events To Full Scale Art Installations.
@@ -19,22 +23,26 @@
         <table>
     <tr>
         <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td><td><img src="celebrations.jpg" height="250px" width="500px"></td><td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
-    <td id="write">CELEBRATIONS<br>BIRTHDAY,HOLIDAYS AND JUST FOR FUNS</td>
-    <td><a href="#"> &rarr;</a></td>
+    <td id="write">CELEBRATIONS<br>BIRTHDAY,HOLIDAYS AND JUST FOR FUNS </td>
+    <td><a href="celebration.html" id="arrow"><img src="arrow-right (1).svg"></a></td>
    </tr>
    <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td> <td><img src="ceremony.jpeg" height="250px" width="500px"></td><td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
    <td id="write">CEREMONIES<br>MULTICULTURAL,INDIAN,AMERICAN,AND CUSTOM <br>WEDDING CEREMONIES</td>
+   <td><a href="ceremonie.html" id="arrow"><img src="arrow-right (1).svg"></a></td>
   </tr>
 
    <tr>
     <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td> <td><img src="reception.jpeg" height="250px" width="500px"></td><td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td id="write">RECEPTIONS<br>EVENING ENTERTAINMENT,AFTER PARTIES,& <br>STUNNING RECEPTION EXPERIENCE</td>
+<td><a href="reception.html" id="arrow"><img src="arrow-right (1).svg"></a></td>
 </tr><tr>
     <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td><td><img src="corporate events.jpeg" height="250px" width="500px"></td><td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td id="write">CORPORATE EVENTS<br>COMPANY CELEBRATION &NETWORKING EVENTS OF<br> EVERY SCALE</td>
+<td><a href="corporate1.html" id="arrow"><img src="arrow-right (1).svg"></a></td>
 </tr><tr>
     <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td> <td><img src="mitzvahs.jpeg" height="250px" width="500px"></td><td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td id="write">MITZVAHS<br>BAR &BAT MITZVAHS</td>
+<td><a href="celebration.html" id="arrow"><img src="arrow-right (1).svg"></a></td>
 </tr>
 
 
