--- a/Home.html
+++ b/Home.html
@@ -7,7 +7,7 @@
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="Home.css">
-    <title>Document</title>
+    <title>Cosmic </title>
 </head>
 <body>
 <main>
@@ -39,9 +39,9 @@
             </ul>
           </div>
         </div>
-      </nav>
-<div class="logo2">
-    <img src="S-removebg-preview.png">
+      </nav>"
+<div class="logo2"><center>
+    <img src="S-removebg-preview.png" class="img-fluid"></center>
 </div>
 <marquee class="marq" direction="right" loop="" scrollamount="6">
 <div class="geek1">
