--- a/Home.html
+++ b/Home.html
@@ -59,19 +59,20 @@
     <h4>You don’t know what you don’t know—but we do. </h4>
     </div>
 </marquee>
-<center>
-<div class="table1">
-<div id="pic">
-        <img src="evelina-friman-hw_sKmjb0ns-unsplash.jpg">
-</div>
-<div id="pic1">
-    <a class="j" href="#">
+<table>
+  <tr>
+    <td id="t1">
+      <img src="evelina-friman-hw_sKmjb0ns-unsplash.jpg">
+    </td>
+    <td id="t2">
+      <a class="k" href="#">
         <img src="Black_And_White_Aesthetic_Minimalist_Modern_Simple_Typography_Coconut_Cosmetics_Logo__1_-removebg-preview (1).png" alt="">
       </a>
-        <h6 class="q"> THE KIND OF PARTY YOUR GUESTS TALK ABOUT FOR DECADES</h6>
+        <h6 class="r"> THE KIND OF PARTY YOUR GUESTS TALK ABOUT FOR DECADES</h6>
         <h4>We’re a perfect match to help you plan a celebration that resonates on a deeply personal level; a party that one day you’ll look back on and say: <i>“Wow, that was everything we wanted and more.”</i></h4>
-</div>
-</div></center>
+    </td>
+  </tr>
+</table>
 </main>
 </body>
 </html>
