--- a/Home.html
+++ b/Home.html
@@ -6,8 +6,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Baskervville+SC&family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="Home.css">
-    <title>Cosmic </title>
+    <title>Cosmic</title>
 </head>
 <body>
 <main>
@@ -59,7 +62,7 @@
     <h4>You don’t know what you don’t know—but we do. </h4>
     </div>
 </marquee>
-<table>
+<table id="A">
   <tr>
     <td id="t1">
       <img src="evelina-friman-hw_sKmjb0ns-unsplash.jpg">
@@ -69,10 +72,49 @@
         <img src="Black_And_White_Aesthetic_Minimalist_Modern_Simple_Typography_Coconut_Cosmetics_Logo__1_-removebg-preview (1).png" alt="">
       </a>
         <h6 class="r"> THE KIND OF PARTY YOUR GUESTS TALK ABOUT FOR DECADES</h6>
-        <h4>We’re a perfect match to help you plan a celebration that resonates on a deeply personal level; a party that one day you’ll look back on and say: <i>“Wow, that was everything we wanted and more.”</i></h4>
+        <h4 id="b">We’re a perfect match to help you plan a celebration that resonates on a deeply personal level; a party that one day you’ll look back on and say: <i>“Wow, that was everything we wanted and more.”</i></h4>
     </td>
   </tr>
 </table>
+<div class="un">
+  <h2 id="hi">WELCOME TO COSMIC OCCASSIONS</h2><br><br>
+  <p id="a">Events That Guests Will Talk About for Years To Come
+    Our parties are beautiful, but that's just the beginning.
+   We bring 35 years of experience to planning events that are tailor-made for each host and their guest list.
+   Our events have been described as fun, unique, elegant, and always innovative.
+  </p>
+</div><br><br>
+<div class="booknine">
+  <div class="p3">
+    <div class="im2"><img src="i1.jpeg"></div>
+  </div>
+  <div class="p3">
+    <div class="im2"><img src="i2.jpeg"></div>
+  </div>
+  <div class="p3">
+    <div class="im2"><img src="i3.jpeg"></div>
+  </div>
+  <div class="p3">
+    <div class="im2"><img src="i4.jpeg"></div>
+  </div>
+  <div class="p3">
+    <div class="im2"><img src="i5.jpeg"></div>
+  </div>
+  <div class="p3">
+    <div class="im2"><img src="i6.jpeg"></div>
+  </div>
+</div><br><br>
+<div class="loop">
+  <video autoplay="" muted="" loop="" playsinline="" id="myVideo">
+    <source src="tara_highlight_2 (1080p).mp4" type="video/mp4">
+  </video>
+  <div class="overlay">
+  <p id="tx">we are</p>
+  <h2>A FULL-SERVICE<br>
+    EVENT PLANNING<br>
+    AND DESIGN COMPANY</h2>
+  </div>
+</div>
 </main>
 </body>
 </html>
