--- a/de.html
+++ b/de.html
@@ -11,3 +11,45 @@
         <h4>We’re a perfect match to help you plan a celebration that resonates on a deeply personal level; a party that one day you’ll look back on and say: <i>“Wow, that was everything we wanted and more.”</i></h4>
 </div>
 </div></center>
+
+#pic{
+        background-image: url("CC-wedding-pattern-design-stripes.jpg");
+        position: relative;
+        background-size: cover;
+        background-repeat: no-repeat;
+        margin: 0%;
+        padding: 0%;
+        height:90vh;
+        background-position: 50% 94%;
+        margin-left: -200px;
+        width:700px;
+    }
+    #pic img{
+        height:500px;
+        width:350px;
+        margin-left:50px;
+        margin-top:40px;
+    }
+    .table1{
+        width: 80vw;
+        margin:10px auto; 
+        display: grid;
+        grid-auto-rows:50px;
+        gap:70px;
+        grid-template-columns: repeat(auto-fill, minmax(300px,3fr));
+        font-family:"Fontspring-DEMO-theseasons-reg";
+    
+    }
+    #pic1{
+        background-color: #6c7d5a;
+        color: #fff;
+        padding: 12px;
+        height:450px;
+        width: 550px;
+        margin-right:220px;
+        margin-top:60px;
+    }
+    .j img{
+        height:150px;
+        width:140px;
+    }
