--- a/cosmic ocassion by mehak/reception.html
+++ b/cosmic ocassion by mehak/reception.html
@@ -20,15 +20,12 @@
             of our one-of-a-kind reception designs.
     </div>
     <div id="contain">
-        <img src="r3.jpeg" height="400px" width="350px" id="ima">
-        <img src="r4.jpeg" height="400px" width="350px" id="ima">
-        <img src="r5.jpeg" height="400px" width="350px" id="ima">
-    </div>
-    <div></div>
-    <div id="contain">
-        <img src="r1.jpg" height="400px" width="350px" id="ima">
-        <img src="r2.jpg" height="400px" width="350px" id="ima">
-        <img src="r3.jpeg" height="400px" width="350px" id="ima">
+        <img src="r3.jpeg"  id="ima">
+        <img src="r4.jpeg"  id="ima">
+        <img src="r5.jpeg"  id="ima">
+        <img src="r1.jpg" id="ima">
+        <img src="r2.jpg" id="ima">
+        <img src="r3.jpeg" id="ima">
     </div>
 </body>
 </html>
