--- a/cosmic ocassion by mehak/contact.html
+++ b/cosmic ocassion by mehak/contact.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="contact.css">
 </head>
 <body>
+    <div id="images">
+        <img src="contact1.jpg" height="200px" width="300px">
+        <img src="contact1.jpg" height="200px" width="300px">
+        <img src="contact1.jpg" height="200px" width="300px">
+
+        
+    </div>
     <form action="/action_page.php">
         <label for="fname">First name:</label><br>
         <input type="text" id="fname" name="fname" ><br>
