--- a/cosmic ocassion by mehak/services.html
+++ b/cosmic ocassion by mehak/services.html
@@ -7,6 +7,35 @@
     <link rel="stylesheet" href="services.css">
 </head>
 <body>
+    <nav class="navbar navbar-expand-sm sticky-top navbar-dark sticky-top" style="background-color:#6c7d5a">
+        <div class="container-fluid">
+          <a class="navbar-brand d-md-none" href="#">
+            <img src="Black_And_White_Aesthetic_Minimalist_Modern_Simple_Typography_Coconut_Cosmetics_Logo__1_-removebg-preview (1).png" alt="">
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav mx-auto">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">HOME</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">ABOUT</a>
+              </li>
+              <a class="navbar-brand d-none d-md-block" href="#">
+                <img src="Black_And_White_Aesthetic_Minimalist_Modern_Simple_Typography_Coconut_Cosmetics_Logo__1_-removebg-preview (1).png" alt="">
+              </a>
+              <li class="nav-item">
+                <a class="nav-link" href="#">PORTFOLIO</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link">CONTACT</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>"
     <img src="services main.jpg" width="100%" height="700px">
     <div id="m">
     <h1 id="S">Services</h1>
