--- a/Home.html
+++ b/Home.html
@@ -109,8 +109,7 @@
     <source src="tara_highlight_2 (1080p).mp4" type="video/mp4">
   </video>
   <div class="overlay">
-  <p id="tx">we are</p>
-  <h2>A FULL-SERVICE<br>
+  <h2><span id="tx">we are</span><br>A FULL-SERVICE<br>
     EVENT PLANNING<br>
     AND DESIGN COMPANY</h2>
   </div>
