--- a/Home.html
+++ b/Home.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 <main>
-      <nav class="navbar navbar-expand-sm sticky-top navbar-dark sticky-top" style="background-color:#6c7d5a">
+      <nav class="navbar navbar-expand-sm sticky-top navbar-dark sticky-top" style="background-color:#6c7d5a ">
         <div class="container-fluid">
           <a class="navbar-brand d-md-none" href="#">
             <img src="Black_And_White_Aesthetic_Minimalist_Modern_Simple_Typography_Coconut_Cosmetics_Logo__1_-removebg-preview (1).png" alt="">
@@ -42,10 +42,10 @@
             </ul>
           </div>
         </div>
-      </nav>"
+      </nav>
 <div class="logo2"><center>
     <img src="S-removebg-preview.png" class="img-fluid"></center>
-</div>
+</div><br>
 <marquee class="marq" direction="right" loop="" scrollamount="6">
 <div class="geek1">
 <img src="vogue.svg">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
