--- a/cosmic ocassion by mehak/reception.html
+++ b/cosmic ocassion by mehak/reception.html
@@ -11,7 +11,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Baskervville+SC&family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
     <title>Reception</title>
     <link rel="stylesheet" href="reception.css">
-    <link rel="stylesheet" href="receptionmedia.css">
+
 </head>
 <body>
     <nav class="navbar navbar-expand-sm sticky-top navbar-dark sticky-top" style="background-color:#6c7d5a">
@@ -48,19 +48,14 @@
         <h1>RECEPTION</h1>
       </div>
       <div class="blank"></div>
-    <div id="mid"><br><br>
-        <h2>View our Las Vegas ice reception captured on film.
-            </h2>
-            A unique reception created using only ice sculptures.<br><br> Scroll to view more 
-            of our one-of-a-kind reception designs.
-    </div>
+   
     <div id="contain">
-        <img src="r3.jpeg"  id="ima">
-        <img src="r4.jpeg"  id="ima">
-        <img src="r5.jpeg"  id="ima">
-        <img src="r1.jpg" id="ima">
-        <img src="r2.jpg" id="ima">
-        <img src="r3.jpeg" id="ima">
+        <img src="r3.jpeg"  id="ima" height="350px" width="350px">
+        <img src="r4.jpeg"  id="ima" height="350px" width="350px">
+        <img src="r5.jpeg"  id="ima" height="350px" width="350px">
+        <img src="r1.jpg" id="ima" height="350px" width="350px">
+        <img src="r2.jpg" id="ima" height="350px" width="350px">
+        <img src="r3.jpeg" id="ima" height="350px" width="350px">
     </div>
 </body>
 </html>
