--- a/cosmic ocassion by mehak/celebration.html
+++ b/cosmic ocassion by mehak/celebration.html
@@ -9,9 +9,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Baskervville+SC&family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
-    <title>Portfolio</title>
+    <title>Celebration</title>
+    <!-- <link rel="stylesheet" href="celebration.css"> -->
     <link rel="stylesheet" href="celebration.css">
-    <link rel="stylesheet" href="celebmedia.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-sm sticky-top navbar-dark sticky-top" style="background-color:#6c7d5a">
@@ -50,12 +50,12 @@
       <div class="blank"></div>
     
     <div id="contain">
-        <img src="cb1.jpg" height="400px" width="350px" id="ima">
-        <img src="cb2.jpg" height="400px" width="350px" id="ima">
-        <img src="cb3.jpg" height="400px" width="350px" id="ima">
-        <img src="cb4.jpg" height="400px" width="350px" id="ima">
-        <img src="cb5.jpg" height="400px" width="350px" id="ima">
-        <img src="cb6.jpg" height="400px" width="350px"  id="ima">
+        <img src="cb1.jpg" height="350px" width="350px" id="ima">
+        <img src="cb2.jpg" height="350px" width="350px" id="ima">
+        <img src="cb3.jpg" height="350px" width="350px" id="ima">
+        <img src="cb4.jpg" height="350px" width="350px" id="ima">
+        <img src="cb5.jpg" height="350px" width="350px" id="ima">
+        <img src="cb6.jpg" height="350px" width="350px"  id="ima">
     </div>
 </body>
 </html>
