--- a/Home.html
+++ b/Home.html
@@ -114,6 +114,22 @@
     AND DESIGN COMPANY</h2>
   </div>
 </div>
+<footer>
+<div class="logo-container">
+  <div class="line"></div>
+  <div class="logo"><img src="Black_And_White_Aesthetic_Minimalist_Modern_Simple_Typography_Coconut_Cosmetics_Logo__1_-removebg-preview (1).png"></div>
+  <div class="line"></div>
+</div>
+<table>
+  <tr>
+    <td></td>
+    <td><div class="next">
+      <p>Destination weddings & events worldwide.</p>
+    </div></td>
+    <td></td>
+  </tr>
+</table>
+</footer>
 </main>
 </body>
 </html>
