--- a/Home.html
+++ b/Home.html
@@ -122,11 +122,20 @@
 </div>
 <table>
   <tr>
-    <td></td>
+    <td>
+      <ul id="link">
+        <li><a href="#">PORTFOLIO</a></li>
+        <li><a href="#">SERVICES</a></li>
+        <li><a href="#">ABOUT</a></li>
+        <li><a href="#">CONTACT</a></li>
+      </ul>
+    </td>
     <td><div class="next">
       <p>Destination weddings & events worldwide.</p>
     </div></td>
-    <td></td>
+    <td>
+      <img src="COSMIC_OCCASSIONS-removebg-preview.png" id="lg">
+    </td>
   </tr>
 </table>
 </footer>
