--- a/About.html
+++ b/About.html
@@ -14,6 +14,7 @@
 </head>
 <body>
 <main>
+    <!-- NAVBAR SECTION -->
       <nav class="navbar navbar-expand-sm sticky-top navbar-dark sticky-top" style="background-color:#6c7d5a ">
         <div class="container-fluid">
           <a class="navbar-brand d-md-none" href="#">
@@ -43,16 +44,24 @@
           </div>
         </div>
       </nav><br><br>
+
+<!-- HEADING -->
 <div class="head">
 <h3>EXTRAORDINARY EVENTS,<br><span id="so">flawless execution</span></h3>
 </div>
+
+<!-- PARALLEX SECTION -->
 <div class="paral">  
 </div><br><br>
+
+<!-- ABOUT SECTION -->
 <div class="about">
 <p>Cosmic Occasions has built a stellar reputation in the event management industry as innovative coordinators, dedicated to going above and beyond to make sure your event is as distinctive and extraordinary as you are. Our team has garnered numerous accolades and awards from clients and industry experts alike. 
 <br><img src="star.png"><br>
 Our passion for event planning, creative vision, meticulous attention to detail, and commitment to inclusivity make Cosmic Events stand out. We offer a fresh approach to event design, working closely with you and your vendors to craft an exceptional event with timeless style and sophistication.</p>    
 </div><br><br>
+
+<!-- CORE VALUES -->
 <div class="about2">
 <h4>Core Values</h4><br>
 <p>
@@ -62,6 +71,8 @@ Produce memorable and authentic experiences with creativity and professionalism.
 <br>
 Deliver top-notch results led by expertise, integrity, and innovation.</p>
 </div><br><br>
+
+<!-- FEATURES -->
 <div class="about3">
     <h4>Featured In</h4>
     <marquee class="marq" direction="left" loop="" scrollamount="6">
@@ -81,7 +92,43 @@ Deliver top-notch results led by expertise, integrity, and innovation.</p>
         <img src="as-seen-oval_no_date$!1000x.png">
     </div><br><center>
     <img src="nytm.svg" id="nytm"></center>
+</div><br><br>
+
+<!-- FOOTER SECTION -->
+<div class="logo-container">
+  <div class="line"></div>
+  <div class="logo"><img src="Black_And_White_Aesthetic_Minimalist_Modern_Simple_Typography_Coconut_Cosmetics_Logo__1_-removebg-preview (1).png"></div>
+  <div class="line"></div>
 </div>
+<footer>
+<table>
+  <tr>
+    <td>
+      <ul id="link">
+        <li><a href="#">PORTFOLIO</a></li>
+        <li><a href="#">SERVICES</a></li>
+        <li><a href="#">ABOUT</a></li>
+        <li><a href="#">EXPENSE TRACKER</a></li>
+      </ul>
+    </td>
+    <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    </td>
+    <td><div class="next">
+      <p>Destination weddings & events worldwide.</p>
+      <h6>join us @cosmic_occasssions</h6>
+    </div></td>
+    <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    </td>
+    <td>
+      <img src="COSMIC_OCCASSIONS-removebg-preview.png" id="lg"><br><br>
+      <a href="#" id="button">CONTACT</a>
+    </td>
+  </tr>
+</table>
+</footer>
     </main>
 
 </body>
