--- a/Home.html
+++ b/Home.html
@@ -14,6 +14,7 @@
 </head>
 <body>
 <main>
+  <!-- NAVBAR SECTION -->
       <nav class="navbar navbar-expand-sm sticky-top navbar-dark sticky-top" style="background-color:#6c7d5a ">
         <div class="container-fluid">
           <a class="navbar-brand d-md-none" href="#">
@@ -43,9 +44,13 @@
           </div>
         </div>
       </nav>
+
+<!-- LOGO  -->
 <div class="logo2"><center>
     <img src="S-removebg-preview.png" class="img-fluid"></center>
 </div><br>
+
+<!-- MARQUEE SECTION -->
 <marquee class="marq" direction="right" loop="" scrollamount="6">
 <div class="geek1">
 <img src="vogue.svg">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -62,10 +67,12 @@
     <h4>You don’t know what you don’t know—but we do. </h4>
     </div>
 </marquee>
+
+<!-- TWO CARDS SECTION -->
 <table id="A">
   <tr>
     <td id="t1">
-      <img src="evelina-friman-hw_sKmjb0ns-unsplash.jpg">
+      <img src="neww.png">
     </td>
     <td id="t2">
       <a class="k" href="#">
@@ -76,6 +83,8 @@
     </td>
   </tr>
 </table>
+
+<!-- PARALLEX SECTION -->
 <div class="un">
   <h2 id="hi">WELCOME TO COSMIC OCCASSIONS</h2><br><br>
   <p id="a">Events That Guests Will Talk About for Years To Come
@@ -84,6 +93,8 @@
    Our events have been described as fun, unique, elegant, and always innovative.
   </p>
 </div><br><br>
+
+<!-- MINI CARDS -->
 <div class="booknine">
   <div class="p3">
     <div class="im2"><img src="i1.jpeg"></div>
@@ -104,6 +115,8 @@
     <div class="im2"><img src="i6.jpeg"></div>
   </div>
 </div><br><br>
+
+<!-- VIDEO SECTION -->
 <div class="loop">
   <video autoplay="" muted="" loop="" playsinline="" id="myVideo">
     <source src="tara_highlight_2 (1080p).mp4" type="video/mp4">
@@ -114,12 +127,14 @@
     AND DESIGN COMPANY</h2>
   </div>
 </div>
-<footer>
+
+<!-- FOOTER SECTION -->
 <div class="logo-container">
   <div class="line"></div>
   <div class="logo"><img src="Black_And_White_Aesthetic_Minimalist_Modern_Simple_Typography_Coconut_Cosmetics_Logo__1_-removebg-preview (1).png"></div>
   <div class="line"></div>
 </div>
+<footer>
 <table>
   <tr>
     <td>
@@ -127,14 +142,23 @@
         <li><a href="#">PORTFOLIO</a></li>
         <li><a href="#">SERVICES</a></li>
         <li><a href="#">ABOUT</a></li>
-        <li><a href="#">CONTACT</a></li>
+        <li><a href="#">EXPENSE TRACKER</a></li>
       </ul>
+    </td>
+    <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     </td>
     <td><div class="next">
       <p>Destination weddings & events worldwide.</p>
+      <h6>join us @cosmic_occasssions</h6>
     </div></td>
+    <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    </td>
     <td>
-      <img src="COSMIC_OCCASSIONS-removebg-preview.png" id="lg">
+      <img src="COSMIC_OCCASSIONS-removebg-preview.png" id="lg"><br><br>
+      <a href="#" id="button">CONTACT</a>
     </td>
   </tr>
 </table>
