--- a/Home.html
+++ b/Home.html
@@ -137,7 +137,7 @@
 <footer>
 <table>
   <tr>
-    <td>
+    <td id="one">
       <ul id="link">
         <li><a href="#">PORTFOLIO</a></li>
         <li><a href="#">SERVICES</a></li>
@@ -145,18 +145,11 @@
         <li><a href="#">EXPENSE TRACKER</a></li>
       </ul>
     </td>
-    <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    </td>
-    <td><div class="next">
+    <td id="two"><div class="next">
       <p>Destination weddings & events worldwide.</p>
       <h6>join us @cosmic_occasssions</h6>
     </div></td>
-    <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    </td>
-    <td>
+    <td id="three">
       <img src="COSMIC_OCCASSIONS-removebg-preview.png" id="lg"><br><br>
       <a href="#" id="button">CONTACT</a>
     </td>
