--- a/cosmic ocassion by mehak/celebration.html
+++ b/cosmic ocassion by mehak/celebration.html
@@ -48,7 +48,10 @@
         <h1>CELEBRATION</h1>
       </div>
       <div class="blank"></div>
-    
+      <div class="loop">
+        <video autoplay="" muted="ceremonie video.mp4" loop="" playsinline="" id="myVideo">
+          <source src="ceremonie video.mp4" type="video/mp4">
+        </video>
     <div id="contain">
         <img src="cb1.jpg" height="350px" width="350px" id="ima">
         <img src="cb2.jpg" height="350px" width="350px" id="ima">
