--- a/cosmic ocassion by mehak/reception.html
+++ b/cosmic ocassion by mehak/reception.html
@@ -44,11 +44,17 @@
         </div>
       </nav>
     <div class="blank"></div>
+
     <div class="container">
         <h1>RECEPTION</h1>
       </div>
       <div class="blank"></div>
-   
+   <div class="written">Our stunning waterfall ceremony captured on film.
+        This incredible Las Vegas ceremony had 7 real waterfalls created. Scroll to view more of our beautiful ceremonies we have created.</div>
+      <div class="loop">
+        <video autoplay="" muted="ceremonie video.mp4" loop="" playsinline="" id="myVideo">
+          <source src="ceremonie video.mp4" type="video/mp4">
+        </video>
     <div id="contain">
         <img src="r3.jpeg"  id="ima" height="350px" width="350px">
         <img src="r4.jpeg"  id="ima" height="350px" width="350px">
