--- a/cosmic ocassion by mehak/ceremonie.html
+++ b/cosmic ocassion by mehak/ceremonie.html
@@ -48,7 +48,12 @@
       </div>
       <div class="blank"></div>
   
-    
+      <div class="written">Our stunning waterfall ceremony captured on film.
+        This incredible Las Vegas ceremony had 7 real waterfalls created. Scroll to view more of our beautiful ceremonies we have created.</div>
+      <div class="loop">
+        <video autoplay="" muted="ceremonie video.mp4" loop="" playsinline="" id="myVideo">
+          <source src="ceremonie video.mp4" type="video/mp4">
+        </video>
     <div id="contain">
         <img src="c1.jpg" height="350px" width="350px" id="ima">
         <img src="c2.jpg" height="350px" width="350px" id="ima">
