--- a/cosmic ocassion by mehak/services.html
+++ b/cosmic ocassion by mehak/services.html
@@ -11,7 +11,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Baskervville+SC&family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
     <title>Services</title>
     <link rel="stylesheet" href="services.css">
-    <link rel="stylesheet" href="servicesmedia.css">
+    
 </head>
 <body>
     <nav class="navbar navbar-expand-sm sticky-top navbar-dark sticky-top" style="background-color:#6c7d5a">
@@ -56,7 +56,8 @@
    
         <tr>
             <td><img src="serve.jpg" id="img"></td>
-            <td ><p id="written">Our services vary depending on the event, but here's<br> a general idea of what we offer</p> 
+            <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+            <td ><p id="written">Our services vary depending on the event, but here's a general idea of what we offer</p> 
            <div id="main">
                 <ul id="one">
             <li>Venue Selection and Layout</li>
