--- a/cosmic ocassion by mehak/ceremonie.html
+++ b/cosmic ocassion by mehak/ceremonie.html
@@ -62,5 +62,27 @@
         <img src="c5.jpeg" height="350px" width="350px"id="ima">
         <img src="c6.jpeg" height="350px" width="350px"id="ima">
     </div>
+    <footer>
+      <table>
+        <tr>
+          <td id="one">
+            <ul id="link">
+              <li><a href="#">PORTFOLIO</a></li>
+              <li><a href="#">SERVICES</a></li>
+              <li><a href="#">ABOUT</a></li>
+              <li><a href="#">EXPENSE TRACKER</a></li>
+            </ul>
+          </td>
+          <td id="two"><div class="next">
+            <p>Destination weddings & events worldwide.</p>
+            <h6>join us @cosmic_occasssions</h6>
+          </div></td>
+          <td id="three">
+            <img src="COSMIC_OCCASSIONS-removebg-preview.png" id="lg"><br><br>
+            <a href="#" id="button">CONTACT</a>
+          </td>
+        </tr>
+      </table>
+      </footer>
 </body>
 </html>
