--- a/cosmic ocassion by mehak/mitzvhans.html
+++ b/cosmic ocassion by mehak/mitzvhans.html
@@ -49,12 +49,12 @@
       <div class="blank"></div>
    
     <div id="contain">
-        <img src="r3.jpeg" height="350px"width="350px" id="ima">
-        <img src="r4.jpeg" height="350px"width="350px"id="ima">
-        <img src="r5.jpeg" height="350px" width="350px"id="ima">
-        <img src="r1.jpg" height="350px" width="350px"id="ima">
-        <img src="r2.jpg" height="350px" width="350px"id="ima">
-        <img src="r3.jpeg" height="350px" width="350px"id="ima">
+        <img src="m1.jpg" height="350px"width="350px" id="ima">
+        <img src="m2.jpg" height="350px"width="350px"id="ima">
+        <img src="m3.jpg" height="350px" width="350px"id="ima">
+        <img src="m4.jpg" height="350px" width="350px"id="ima">
+        <img src="m5.jpg" height="350px" width="350px"id="ima">
+        <img src="m6.jpg" height="350px" width="350px"id="ima">
     </div>
 </body>
 </html>
