--- a/About.html
+++ b/About.html
@@ -29,7 +29,7 @@
                 <a class="nav-link active" aria-current="page" href="#">HOME</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">ABOUT</a>
+                <a class="nav-link" href="About.html">ABOUT</a>
               </li>
               <a class="navbar-brand d-none d-md-block" href="#">
                 <img src="Black_And_White_Aesthetic_Minimalist_Modern_Simple_Typography_Coconut_Cosmetics_Logo__1_-removebg-preview (1).png" alt="">
@@ -103,26 +103,27 @@ Deliver top-notch results led by expertise, integrity, and innovation.</p>
 <footer>
 <table>
   <tr>
-    <td>
+    <td id="one">
       <ul id="link">
         <li><a href="#">PORTFOLIO</a></li>
         <li><a href="#">SERVICES</a></li>
-        <li><a href="#">ABOUT</a></li>
+        <li><a href="About.html">ABOUT</a></li>
         <li><a href="#">EXPENSE TRACKER</a></li>
       </ul>
     </td>
-    <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     </td>
-    <td><div class="next">
+    <td id="two"><div class="next">
       <p>Destination weddings & events worldwide.</p>
-      <h6>join us @cosmic_occasssions</h6>
+      <h6>join us @cosmic_occasions</h6>
+      <br><br><br>
+      <h7>© 2019 Cosmic Occasions. All Rights Reserved.</h7>
     </div></td>
-    <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     </td>
-    <td>
+    <td id="three">
       <img src="COSMIC_OCCASSIONS-removebg-preview.png" id="lg"><br><br>
       <a href="#" id="button">CONTACT</a>
     </td>
