--- a/Home.html
+++ b/Home.html
@@ -29,7 +29,7 @@
                 <a class="nav-link active" aria-current="page" href="#">HOME</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">ABOUT</a>
+                <a class="nav-link" href="About.html">ABOUT</a>
               </li>
               <a class="navbar-brand d-none d-md-block" href="#">
                 <img src="Black_And_White_Aesthetic_Minimalist_Modern_Simple_Typography_Coconut_Cosmetics_Logo__1_-removebg-preview (1).png" alt="">
@@ -67,26 +67,20 @@
     <h4>You don’t know what you don’t know—but we do. </h4>
     </div>
 </marquee>
-
 <!-- TWO CARDS SECTION -->
-<table id="A">
-  <tr>
-    <td id="t1">
-      <img src="neww.png">
-    </td>
-    <td id="t2">
-      <a class="k" href="#">
-        <img src="Black_And_White_Aesthetic_Minimalist_Modern_Simple_Typography_Coconut_Cosmetics_Logo__1_-removebg-preview (1).png" alt="">
-      </a>
-        <h6 class="r"> THE KIND OF PARTY YOUR GUESTS TALK ABOUT FOR DECADES</h6>
-        <h4 id="b">We’re a perfect match to help you plan a celebration that resonates on a deeply personal level; a party that one day you’ll look back on and say: <i>“Wow, that was everything we wanted and more.”</i></h4>
-    </td>
-  </tr>
-</table>
-
+<div class="container1">
+  <div class="image-section">
+      <img src="luxury-wedding-planner-michigan.jpg" alt="Decorative Image">
+  </div>
+  <div class="text-box">
+      <h3>THE KIND OF PARTY YOUR GUESTS TALK ABOUT FOR DECADES</h3>
+      <p>We’re a perfect match to help you plan a celebration that resonates on a deeply personal level; a party that one day you’ll look back on and say: <i>“Wow, that was everything we wanted and more.”</i></p>
+      <a href="#" class="button1">Wander Through Our Eventspiration →</a>
+  </div>
+</div>
 <!-- PARALLEX SECTION -->
 <div class="un">
-  <h2 id="hi">WELCOME TO COSMIC OCCASSIONS</h2><br><br>
+  <h2 id="hi">WELCOME TO COSMIC OCCASIONS</h2><br><br>
   <p id="a">Events That Guests Will Talk About for Years To Come
     Our parties are beautiful, but that's just the beginning.
    We bring 35 years of experience to planning events that are tailor-made for each host and their guest list.
@@ -141,14 +135,22 @@
       <ul id="link">
         <li><a href="#">PORTFOLIO</a></li>
         <li><a href="#">SERVICES</a></li>
-        <li><a href="#">ABOUT</a></li>
+        <li><a href="About.html">ABOUT</a></li>
         <li><a href="#">EXPENSE TRACKER</a></li>
       </ul>
     </td>
+    <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    </td>
     <td id="two"><div class="next">
       <p>Destination weddings & events worldwide.</p>
-      <h6>join us @cosmic_occasssions</h6>
+      <h6>join us @cosmic_occasions</h6>
+      <br><br><br>
+      <h7>© 2019 Cosmic Occasions. All Rights Reserved.</h7>
     </div></td>
+    <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    </td>
     <td id="three">
       <img src="COSMIC_OCCASSIONS-removebg-preview.png" id="lg"><br><br>
       <a href="#" id="button">CONTACT</a>
