--- a/cosmic ocassion by mehak/celebration.html
+++ b/cosmic ocassion by mehak/celebration.html
@@ -48,10 +48,7 @@
         <h1>CELEBRATION</h1>
       </div>
       <div class="blank"></div>
-      <div class="loop">
-        <video autoplay="" muted="ceremonie video.mp4" loop="" playsinline="" id="myVideo">
-          <source src="ceremonie video.mp4" type="video/mp4">
-        </video>
+      
     <div id="contain">
         <img src="cb1.jpg" height="350px" width="350px" id="ima">
         <img src="cb2.jpg" height="350px" width="350px" id="ima">
@@ -60,5 +57,41 @@
         <img src="cb5.jpg" height="350px" width="350px" id="ima">
         <img src="cb6.jpg" height="350px" width="350px"  id="ima">
     </div>
+    <!-- FOOTER SECTION -->
+<div class="logo-container">
+  <div class="line"></div>
+  <div class="logo"><img src="Black_And_White_Aesthetic_Minimalist_Modern_Simple_Typography_Coconut_Cosmetics_Logo__1_-removebg-preview (1).png"></div>
+  <div class="line"></div>
+</div>
+<footer>
+<table>
+  <tr>
+    <td id="one">
+      <ul id="link">
+        <li><a href="#">PORTFOLIO</a></li>
+        <li><a href="#">SERVICES</a></li>
+        <li><a href="About.html">ABOUT</a></li>
+        <li><a href="#">EXPENSE TRACKER</a></li>
+      </ul>
+    </td>
+    <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    </td>
+    <td id="two"><div class="next">
+      <p>Destination weddings & events worldwide.</p>
+      <h6>join us @cosmic_occasions</h6>
+      <br><br><br>
+      <h7>© 2019 Cosmic Occasions. All Rights Reserved.</h7>
+    </div></td>
+    <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    </td>
+    <td id="three">
+      <img src="COSMIC_OCCASSIONS-removebg-preview.png" id="lg"><br><br>
+      <a href="#" id="button">CONTACT</a>
+    </td>
+  </tr>
+</table>
+</footer>
 </body>
 </html>
