--- a/cosmic ocassion by mehak/portfolio.html
+++ b/cosmic ocassion by mehak/portfolio.html
@@ -12,7 +12,8 @@
     <link rel="stylesheet" href="porfolio.css">
 
 </head>
-<body>
+<body><!-- NAVBAR SECTION -->
+
     <nav class="navbar navbar-expand-sm sticky-top navbar-dark sticky-top" style="background-color:#6c7d5a">
         <div class="container-fluid">
           <a class="navbar-brand d-md-none" href="#">
@@ -42,6 +43,7 @@
           </div>
         </div>
       </nav>
+      <!--Background Image-->
     <div id="back">
         <h1 id="porfolio">Portfolio</h1>
     </div>
@@ -50,8 +52,9 @@
         With Works Featured In Jakarta, New York, Hong Kong, Bahrain, London, Las Vegas
          And Beyond<br> Cosmic Occasion Creates Everything From Dramatic Events To Full Scale Art Installations.
     </div>
+    <!--Portfolio-->
     <div id="gallery"><h1 id="p">Portfolio</h1><br>
-        <table>
+        <table id="por">
     <tr>
         <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td><td><img src="celebrations.jpg" height="250px" width="500px"></td><td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
     <td id="write">CELEBRATIONS<br>BIRTHDAY,HOLIDAYS AND JUST FOR FUNS </td>
@@ -73,11 +76,48 @@
 </tr><tr>
     <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td> <td><img src="mitzvahs.jpeg" height="250px" width="500px"></td><td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td id="write">MITZVAHS<br>BAR &BAT MITZVAHS</td>
-<td><a href="celebration.html" id="arrow"><img src="arrow-right (1).svg"></a></td>
+<td><a href="mitzvhans.html" id="arrow"><img src="arrow-right (1).svg"></a></td>
 </tr>
 
 
     </div>
 </table>
+<br><br>
+<!-- FOOTER SECTION -->
+<div class="logo-container">
+  <div class="line"></div>
+  <div class="logo"><img src="Black_And_White_Aesthetic_Minimalist_Modern_Simple_Typography_Coconut_Cosmetics_Logo__1_-removebg-preview (1).png"></div>
+  <div class="line"></div>
+</div>
+<footer>
+<table >
+  <tr>
+    <td id="one">
+      <ul id="link">
+        <li><a href="#">PORTFOLIO</a></li>
+        <li><a href="#">SERVICES</a></li>
+        <li><a href="About.html">ABOUT</a></li>
+        <li><a href="#">EXPENSE TRACKER</a></li>
+      </ul>
+    </td>
+    <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    </td>
+    <td id="two"><div class="next">
+      <p>Destination weddings & events worldwide.</p>
+      <h6>join us @cosmic_occasions</h6>
+      <br><br><br>
+      <h7>© 2019 Cosmic Occasions. All Rights Reserved.</h7>
+    </div></td>
+    <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    </td>
+    <td id="three">
+      <img src="COSMIC_OCCASSIONS-removebg-preview.png" id="lg"><br><br>
+      <a href="#" id="button">CONTACT</a>
+    </td>
+  </tr>
+</table>
+</footer>
 </body>
 </html>
