--- a/cosmic ocassion by mehak/reception.html
+++ b/cosmic ocassion by mehak/reception.html
@@ -14,6 +14,7 @@
 
 </head>
 <body>
+    <!-- NAVBAR SECTION -->
     <nav class="navbar navbar-expand-sm sticky-top navbar-dark sticky-top" style="background-color:#6c7d5a">
         <div class="container-fluid">
           <a class="navbar-brand d-md-none" href="#">
@@ -44,17 +45,19 @@
         </div>
       </nav>
     <div class="blank"></div>
-
+  <!-- PARALLEX SECTION -->
     <div class="container">
         <h1>RECEPTION</h1>
       </div>
       <div class="blank"></div>
    <div class="written">Our stunning waterfall ceremony captured on film.
         This incredible Las Vegas ceremony had 7 real waterfalls created. Scroll to view more of our beautiful ceremonies we have created.</div>
-      <div class="loop">
+      <!-- VIDEO SECTION -->
+        <div class="loop">
         <video autoplay="" muted="ceremonie video.mp4" loop="" playsinline="" id="myVideo">
           <source src="ceremonie video.mp4" type="video/mp4">
         </video>
+        <!--img section-->
     <div id="contain">
         <img src="r3.jpeg"  id="ima" height="350px" width="350px">
         <img src="r4.jpeg"  id="ima" height="350px" width="350px">
@@ -63,5 +66,41 @@
         <img src="r2.jpg" id="ima" height="350px" width="350px">
         <img src="r3.jpeg" id="ima" height="350px" width="350px">
     </div>
+    <!-- FOOTER SECTION -->
+<div class="logo-container">
+  <div class="line"></div>
+  <div class="logo"><img src="Black_And_White_Aesthetic_Minimalist_Modern_Simple_Typography_Coconut_Cosmetics_Logo__1_-removebg-preview (1).png"></div>
+  <div class="line"></div>
+</div>
+<footer>
+<table>
+  <tr>
+    <td id="one">
+      <ul id="link">
+        <li><a href="#">PORTFOLIO</a></li>
+        <li><a href="#">SERVICES</a></li>
+        <li><a href="About.html">ABOUT</a></li>
+        <li><a href="#">EXPENSE TRACKER</a></li>
+      </ul>
+    </td>
+    <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    </td>
+    <td id="two"><div class="next">
+      <p>Destination weddings & events worldwide.</p>
+      <h6>join us @cosmic_occasions</h6>
+      <br><br><br>
+      <h7>© 2019 Cosmic Occasions. All Rights Reserved.</h7>
+    </div></td>
+    <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    </td>
+    <td id="three">
+      <img src="COSMIC_OCCASSIONS-removebg-preview.png" id="lg"><br><br>
+      <a href="#" id="button">CONTACT</a>
+    </td>
+  </tr>
+</table>
+</footer>
 </body>
 </html>
