--- a/cosmic ocassion by mehak/ceremonie.html
+++ b/cosmic ocassion by mehak/ceremonie.html
@@ -9,10 +9,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Baskervville+SC&family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
-    <title>Portfolio</title>
+    <title>Ceremonie</title>
     <link rel="stylesheet" href="ceremonie.css">
 </head>
 <body>
+  <!-- NAVBAR SECTION -->
     <nav class="navbar navbar-expand-sm sticky-top navbar-dark sticky-top" style="background-color:#6c7d5a">
         <div class="container-fluid">
           <a class="navbar-brand d-md-none" href="#">
@@ -43,6 +44,7 @@
         </div>
       </nav>
     <div class="blank"></div>
+    <!-- PARALLEX SECTION -->
     <div class="container">
         <h1>CEREMONIES</h1>
       </div>
@@ -51,9 +53,11 @@
       <div class="written">Our stunning waterfall ceremony captured on film.
         This incredible Las Vegas ceremony had 7 real waterfalls created. Scroll to view more of our beautiful ceremonies we have created.</div>
       <div class="loop">
+        <!-- VIDEO SECTION -->
         <video autoplay="" muted="ceremonie video.mp4" loop="" playsinline="" id="myVideo">
           <source src="ceremonie video.mp4" type="video/mp4">
         </video>
+        <!--img section-->
     <div id="contain">
         <img src="c1.jpg" height="350px" width="350px" id="ima">
         <img src="c2.jpg" height="350px" width="350px" id="ima">
@@ -62,27 +66,41 @@
         <img src="c5.jpeg" height="350px" width="350px"id="ima">
         <img src="c6.jpeg" height="350px" width="350px"id="ima">
     </div>
-    <footer>
-      <table>
-        <tr>
-          <td id="one">
-            <ul id="link">
-              <li><a href="#">PORTFOLIO</a></li>
-              <li><a href="#">SERVICES</a></li>
-              <li><a href="#">ABOUT</a></li>
-              <li><a href="#">EXPENSE TRACKER</a></li>
-            </ul>
-          </td>
-          <td id="two"><div class="next">
-            <p>Destination weddings & events worldwide.</p>
-            <h6>join us @cosmic_occasssions</h6>
-          </div></td>
-          <td id="three">
-            <img src="COSMIC_OCCASSIONS-removebg-preview.png" id="lg"><br><br>
-            <a href="#" id="button">CONTACT</a>
-          </td>
-        </tr>
-      </table>
-      </footer>
+    <!-- FOOTER SECTION -->
+<div class="logo-container">
+  <div class="line"></div>
+  <div class="logo"><img src="Black_And_White_Aesthetic_Minimalist_Modern_Simple_Typography_Coconut_Cosmetics_Logo__1_-removebg-preview (1).png"></div>
+  <div class="line"></div>
+</div>
+<footer>
+<table>
+  <tr>
+    <td id="one">
+      <ul id="link">
+        <li><a href="#">PORTFOLIO</a></li>
+        <li><a href="#">SERVICES</a></li>
+        <li><a href="About.html">ABOUT</a></li>
+        <li><a href="#">EXPENSE TRACKER</a></li>
+      </ul>
+    </td>
+    <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    </td>
+    <td id="two"><div class="next">
+      <p>Destination weddings & events worldwide.</p>
+      <h6>join us @cosmic_occasions</h6>
+      <br><br><br>
+      <h7>© 2019 Cosmic Occasions. All Rights Reserved.</h7>
+    </div></td>
+    <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    </td>
+    <td id="three">
+      <img src="COSMIC_OCCASSIONS-removebg-preview.png" id="lg"><br><br>
+      <a href="#" id="button">CONTACT</a>
+    </td>
+  </tr>
+</table>
+</footer>
 </body>
 </html>
