--- a/cosmic ocassion by mehak/mitzvhans.html
+++ b/cosmic ocassion by mehak/mitzvhans.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="mitzvhan.css">
 </head>
 <body>
+   <!-- NAVBAR SECTION -->
     <nav class="navbar navbar-expand-sm sticky-top navbar-dark sticky-top" style="background-color:#6c7d5a">
         <div class="container-fluid">
           <a class="navbar-brand d-md-none" href="#">
@@ -43,11 +44,12 @@
         </div>
       </nav>
     <div class="blank"></div>
+     <!-- PARALLEX SECTION -->
     <div class="container">
         <h1>MITZVAHS</h1>
       </div>
       <div class="blank"></div>
-   
+   <!--img section-->
     <div id="contain">
         <img src="m1.jpg" height="350px"width="350px" id="ima">
         <img src="m2.jpg" height="350px"width="350px"id="ima">
@@ -56,5 +58,41 @@
         <img src="m5.jpg" height="350px" width="350px"id="ima">
         <img src="m6.jpg" height="350px" width="350px"id="ima">
     </div>
+    <!-- FOOTER SECTION -->
+<div class="logo-container">
+  <div class="line"></div>
+  <div class="logo"><img src="Black_And_White_Aesthetic_Minimalist_Modern_Simple_Typography_Coconut_Cosmetics_Logo__1_-removebg-preview (1).png"></div>
+  <div class="line"></div>
+</div>
+<footer>
+<table>
+  <tr>
+    <td id="one">
+      <ul id="link">
+        <li><a href="#">PORTFOLIO</a></li>
+        <li><a href="#">SERVICES</a></li>
+        <li><a href="About.html">ABOUT</a></li>
+        <li><a href="#">EXPENSE TRACKER</a></li>
+      </ul>
+    </td>
+    <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    </td>
+    <td id="two"><div class="next">
+      <p>Destination weddings & events worldwide.</p>
+      <h6>join us @cosmic_occasions</h6>
+      <br><br><br>
+      <h7>© 2019 Cosmic Occasions. All Rights Reserved.</h7>
+    </div></td>
+    <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    </td>
+    <td id="three">
+      <img src="COSMIC_OCCASSIONS-removebg-preview.png" id="lg"><br><br>
+      <a href="#" id="button">CONTACT</a>
+    </td>
+  </tr>
+</table>
+</footer>
 </body>
 </html>
