--- a/About.html
+++ b/About.html
@@ -17,7 +17,7 @@
     <!-- NAVBAR SECTION -->
       <nav class="navbar navbar-expand-sm sticky-top navbar-dark sticky-top" style="background-color:#6c7d5a ">
         <div class="container-fluid">
-          <a class="navbar-brand d-md-none" href="#">
+          <a class="navbar-brand d-md-none" href="Home.html">
             <img src="Black_And_White_Aesthetic_Minimalist_Modern_Simple_Typography_Coconut_Cosmetics_Logo__1_-removebg-preview (1).png" alt="">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -35,10 +35,10 @@
                 <img src="Black_And_White_Aesthetic_Minimalist_Modern_Simple_Typography_Coconut_Cosmetics_Logo__1_-removebg-preview (1).png" alt="">
               </a>
               <li class="nav-item">
-                <a class="nav-link" href="#">PORTFOLIO</a>
+                <a class="nav-link" href="portfolio.html">PORTFOLIO</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link">CONTACT</a>
+                <a class="nav-link" href="contact.html">CONTACT</a>
               </li>
             </ul>
           </div>
@@ -105,8 +105,8 @@ Deliver top-notch results led by expertise, integrity, and innovation.</p>
   <tr>
     <td id="one">
       <ul id="link">
-        <li><a href="#">PORTFOLIO</a></li>
-        <li><a href="#">SERVICES</a></li>
+        <li><a href="portfolio.html">PORTFOLIO</a></li>
+        <li><a href="services.html">SERVICES</a></li>
         <li><a href="About.html">ABOUT</a></li>
         <li><a href="#">EXPENSE TRACKER</a></li>
       </ul>
@@ -125,12 +125,11 @@ Deliver top-notch results led by expertise, integrity, and innovation.</p>
     </td>
     <td id="three">
       <img src="COSMIC_OCCASSIONS-removebg-preview.png" id="lg"><br><br>
-      <a href="#" id="button">CONTACT</a>
+      <a href="contact.html" id="button">CONTACT</a>
     </td>
   </tr>
 </table>
 </footer>
     </main>
-
 </body>
 </html>
