--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
 
     <nav class="navbar navbar-expand-sm sticky-top navbar-dark sticky-top" style="background-color:#6c7d5a">
         <div class="container-fluid">
-          <a class="navbar-brand d-md-none" href="#">
+          <a class="navbar-brand d-md-none" href="Home.html">
             <img src="Black_And_White_Aesthetic_Minimalist_Modern_Simple_Typography_Coconut_Cosmetics_Logo__1_-removebg-preview (1).png" alt="">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -25,10 +25,10 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav mx-auto">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">HOME</a>
+                <a class="nav-link active" aria-current="page" href="Home.html">HOME</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="">ABOUT</a>
+                <a class="nav-link" href="About.html">ABOUT</a>
               </li>
               <a class="navbar-brand d-none d-md-block" href="#">
                 <img src="Black_And_White_Aesthetic_Minimalist_Modern_Simple_Typography_Coconut_Cosmetics_Logo__1_-removebg-preview (1).png" alt="">
